# microservice-django-auth-service

./: .env.example  Jenkinsfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  dockerfile.prod  manage.py  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
DjangoAuth/: asgi.py  settings.py  urls.py  wsgi.py
Infrastructure/event/listener/: topic.py
Infrastructure/kafka/: producer.py
Infrastructure/service/: __init__.py
Infrastructure/service/factory/: email.py  security.py
Infrastructure/service/interface/: notification.py
Nginx/: django.conf
User/: admin.py  models.py  serializers.py  urls.py  views.py
User/migrations/: 0001_initial.py  0002_remove_userprofiles_groups_and_more.py  0002_remove_userprofiles_is_staff_and_more.py  0003_userprofiles_fullname.py  0003_userprofiles_is_active_userprofiles_is_staff_and_more.py  0004_remove_userprofiles_is_active_and_more.py  0005_userprofiles_is_active_userprofiles_is_staff_and_more.py  0006_useraddress.py  0007_rename_useraddress_address.py  0008_rename_user_id_address_user.py  0009_userprofiles_customer_omise_id.py
templates/auth/: email_verification.html
